:bug: fix: sidebar alignment.

--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,30 +1,42 @@
 .sidebar {
   background-color: rgb(39, 37, 43);
-  padding: 2vh;
   height: 100vh;
   width: 9vh;
 }
 
 .sidebar .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4vh;
+  width: 9vh;
+  padding-top: 2vh;
+}
+
+.sidebar #divisor {
   border-bottom: 1px solid white;
+  height: 2vh;
+  width: 7vh;
+  margin-left: 1vh;
 }
 
 .sidebar ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   list-style: none;
-  margin-top: 2vh;
+  height: 90%;
 }
 
 .sidebar ul li {
-  margin-top: 3vh;
+  margin-top: 4vh;
 }
 
 .sidebar .logout-button {
   display: flex;
   justify-content: center;
+  align-items: center;
   cursor: pointer;
-  margin-top: 65vh;
+  height: 2vh;
 }
